--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -3,11 +3,23 @@
 }
 
 .list {
-  list-style: none;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 40px;
-  padding-right: 40px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 40px;
+  padding: 40px;
+  list-style: none;
+}
+
+@media screen and (min-width: 768px) {
+  .list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .list {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .listItem {
@@ -17,6 +29,7 @@
   align-items: center;
   color: navy;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  width: 100%;
 }
 .listItem:hover,
 .listItem:focus {
@@ -24,7 +37,12 @@
   cursor: pointer;
 }
 .listLink {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
+  width: 100%;
 }
 
 .listImg {
